Version 2.0
--------------
2011-09-06 erra <erra@ya.ru>
	* ircd/s_user.c: only allow umode +I via SVSMODE

2011-09-02 erra <erra@ya.ru>
	* common/conversion.c, common/conversion.h.in, common/match.c,
		common/match_ext.h, common/packet.c, common/send.c,
		common/support.c, common/support_ext.h, common/struct_def.h,
		common/sys_def.h, contrib/ircdwatch/ircdwatch.c,
		iauth/a_conf.c, iauth/a_io.c, iauth/a_log.c, iauth/mod_dnsbl.c,
		iauth/mod_pipe.c, iauth/mod_rfc931.c, iauth/mod_socks.c,
		iauth/mod_webproxy.c, ircd/channel.c, ircd/channel_ext.h,
		ircd/chkconf.c, ircd/config_read.c, ircd/hash.c, ircd/ircd.c,
		ircd/res.c, ircd/s_auth.c, ircd/s_bsd.c, ircd/s_bsd_ext.h,
		ircd/s_conf.c, ircd/s_conf_ext.h, ircd/s_id.c, ircd/s_misc.c,
		ircd/s_user.c, ircd/s_user_ext.h, ircd/s_zip.c,
		ircd/s_zip_ext.h, ircd/version.c.SH.in, ircd/whowas.c,
		ircd/whowas_ext.h, iserv/i_io.c, iserv/i_log.c,
		iserv/iserv.c, iserv/iserv.h, rusnet/rusnet_cmds.c,
		rusnet/rusnet_virtual.c: code clearance (no warnings
			at compile time)
	* ircd/s_user.c: allow network services to send messages and
			notices to users with +R mode set (registered only);
			sendto_one(sptr, err_str(ERR_REGONLY... calls fixed
	* rusnet/rusnet_cmds.c: do not pass SVSMODE +I/+R to older servers
	* support/config.h.dist, support/Makefile.in: avoid duplicated macros;
			place all path definitions into Makefile
	* support/configure, support/configure.in: -Wall -funsigned-char for gcc

2011-09-01 erra <erra@ya.ru>
	* common/numeric_def.h, ircd/s_err.c: RPL_IDENTIFIED added
	* ircd/s_user.c: RPL_IDENTIFIED added to send_whois;
			"I" added to who_one for identified nicks
	* support/configure, support/configure.in: amd64 is taken into account
			for libiconv.a; CPPFLAGS override added for IDN test

2011-08-31 erra <erra@ya.ru>
	* common/send.c, common/send_ext.h: export dead_link for s_bsd.c
	* ircd/channel.c: allow halfops to -h themselves
	* ircd/s_bsd.c: mark link as dead if ECONNRESET occurs;