@@ -2,6 +2,10 @@
 --------------------------------------------------------------------------
 Версия 2.0
 --------------
+2011-09-07 erra <erra@ya.ru>
+	* common/send.c: подмена цветного сообщения в QUIT для каналов
+			в режиме +c
+
 2011-09-06 erra <erra@ya.ru>
 	* ircd/s_user.c: режим +I для пользователя разрешён только
 			посредством SVSMODE
