@@ -1,5 +1,8 @@
 Version 2.0
 --------------
+2011-09-07 erra <erra@ya.ru>
+	* common/send.c: forced message in QUIT for colorless channels
+
 2011-09-06 erra <erra@ya.ru>
 	* ircd/s_user.c: only allow umode +I via SVSMODE
 
